tests/algorithms/transpiler/Zig/sorts/recursive_insertion_sort.error
exit status 1
/workspace/mochi/tests/algorithms/transpiler/Zig/sorts/recursive_insertion_sort.zig:32:23: error: expected expression, found ';'