tests/algorithms/transpiler/Zig/sorts/recursive_insertion_sort.zig
// Generated by Mochi Zig transpiler on 2025-08-24 08:57 +0700
const std = @import("std");

fn handleError(err: anyerror) noreturn {
    std.debug.panic("{any}", .{err});
}

fn insert_next(collection: []i64, index: i64) []i64 {
    var arr: []i64 = blk0: { const tmp = std.heap.page_allocator.alloc(i64, collection.len) catch unreachable; @memcpy(tmp, collection); break :blk0 tmp; };
    arr = arr;
    if (index >= @as(i64, @intCast(arr.len)) or arr[_idx(arr.len, index -% 1)] <= arr[_idx(arr.len, index)]) {
        return arr;
    }
    const j: i64 = index -% 1;
    const temp: i64 = arr[_idx(arr.len, j)];
    arr[_idx(arr.len, j)] = arr[_idx(arr.len, index)];
    arr[_idx(arr.len, index)] = temp;
    return insert_next(arr, index +% 1);
}

fn rec_insertion_sort(collection_1: []i64, n: i64) []i64 {
    var arr_1: []i64 = blk1: { const tmp = std.heap.page_allocator.alloc(i64, collection_1.len) catch unreachable; @memcpy(tmp, collection_1); break :blk1 tmp; };
    arr_1 = arr_1;
    if (@as(i64, @intCast(arr_1.len)) <= 1 or n <= 1) {
        return arr_1;
    }
    arr_1 = insert_next(arr_1, n -% 1);
    return rec_insertion_sort(arr_1, n -% 1);
}

fn test_rec_insertion_sort() void {
    var col1: []i64 = ;
    col1 = col1;
    col1 = rec_insertion_sort(col1, @as(i64, @intCast(col1.len)));
    if (col1[_idx(col1.len, 0)] != 1 or col1[_idx(col1.len, 1)] != 1 or col1[_idx(col1.len, 2)] != 2) {
        @panic("test1 failed");
    }
    var col2: []i64 = blk2: { var _tmp = std.ArrayList(i64).init(std.heap.page_allocator); _tmp.append(2) catch unreachable; _tmp.append(1) catch unreachable; _tmp.append(0) catch unreachable; _tmp.append(0 -% 1) catch unreachable; _tmp.append(0 -% 2) catch unreachable; break :blk2 (_tmp.toOwnedSlice() catch unreachable); };
    col2 = col2;
    col2 = rec_insertion_sort(col2, @as(i64, @intCast(col2.len)));
    if (col2[_idx(col2.len, 0)] != -2) {
        @panic("test2 failed");
    }
    if (col2[_idx(col2.len, 1)] != -1) {
        @panic("test2 failed");
    }
    if (col2[_idx(col2.len, 2)] != 0) {
        @panic("test2 failed");
    }
    if (col2[_idx(col2.len, 3)] != 1) {
        @panic("test2 failed");
    }
    if (col2[_idx(col2.len, 4)] != 2) {
        @panic("test2 failed");
    }
    var col3: []i64 = ;
    col3 = col3;
    col3 = rec_insertion_sort(col3, @as(i64, @intCast(col3.len)));
    if (col3[_idx(col3.len, 0)] != 1) {
        @panic("test3 failed");
    }
}

fn mochi_main() void {
    test_rec_insertion_sort();
    var numbers: []i64 = ;
    numbers = numbers;
    numbers = rec_insertion_sort(numbers, @as(i64, @intCast(numbers.len)));
    std.debug.print("{s}\n", .{_str(numbers)});
}

pub fn main() void {
    {
        const __start = _now();
        const __start_mem: i64 = _mem();
        mochi_main();
        const __end = _now();
        const __end_mem: i64 = _mem();
        const __duration_us: i64 = @divTrunc(@as(i64, @intCast(__end - __start)), 1000);
        const __mem_diff: i64 = __end_mem - __start_mem;
        const __memory_bytes: i64 = if (__mem_diff < 0) -__mem_diff else __mem_diff;
        std.debug.print("{{\"duration_us\":{d},\"memory_bytes\":{d},\"name\":\"main\"}}\n", .{__duration_us, __memory_bytes});
    }
}

var _now_seed: i64 = 0;
var _now_seeded: bool = false;
fn _now() i64 {
    if (_now_seeded) {
        _now_seed = @mod(_now_seed * 1664525 + 1013904223, 2147483647);
        return _now_seed;
    }
    if (! _now_seeded) {
        if (std.process.getEnvVarOwned(std.heap.page_allocator, "MOCHI_NOW_SEED")) |env_seed| {
            defer std.heap.page_allocator.free(env_seed);
            if (std.fmt.parseInt(i64, env_seed, 10)) |v| {
                _now_seed = v;
                _now_seeded = true;
                _now_seed = @mod(_now_seed * 1664525 + 1013904223, 2147483647);
                return _now_seed;
            } else |_| {}
        } else |_| {}
    }
    return @as(i64, @intCast(std.time.nanoTimestamp()));
}

fn _idx(len: usize, i: i64) usize {
    return if (i < 0 or i >= @as(i64, @intCast(len))) 0 else @as(usize, @intCast(i));
}

fn _str(v: anytype) []const u8 {
    if (@TypeOf(v) == f64 or @TypeOf(v) == f32) {
        return std.fmt.allocPrint(std.heap.page_allocator, "{d}", .{v}) catch unreachable;
    }
    const info = @typeInfo(@TypeOf(v));
    switch (info) {
    .Pointer => |p| {
        if (p.size == .Slice) {
            var out = std.ArrayList(u8).init(std.heap.page_allocator);
            defer out.deinit();
            out.append('[') catch unreachable;
            for (v, 0..) |e, i| {
                if (i != 0) { out.append(' ') catch unreachable; }
                const s = _str(e);
                out.appendSlice(s) catch unreachable;
            }
            out.append(']') catch unreachable;
            return out.toOwnedSlice() catch unreachable;
        }
    },
    .Struct => |_| {
        if (@hasDecl(@TypeOf(v), "iterator")) {
            const KVPair = struct{ ks: []const u8, vs: []const u8 };
            var pairs = std.ArrayList(KVPair).init(std.heap.page_allocator);
            defer pairs.deinit();
            var it = v.iterator();
            while (it.next()) |e| {
                const ks = _str(e.key_ptr.*);
                const vs = _str(e.value_ptr.*);
                pairs.append(.{ .ks = ks, .vs = vs }) catch unreachable;
            }
            std.sort.heap(KVPair, pairs.items, {}, struct {
                pub fn less(_: void, a: KVPair, b: KVPair) bool {
                    return std.mem.lessThan(u8, a.ks, b.ks);
                }
            }.less);
            var out = std.ArrayList(u8).init(std.heap.page_allocator);
            defer out.deinit();
            out.appendSlice("map[") catch unreachable;
            for (pairs.items, 0..) |e, i| {
                if (i != 0) { out.append(' ') catch unreachable; }
                out.appendSlice(e.ks) catch unreachable;
                out.append(':') catch unreachable;
                out.appendSlice(e.vs) catch unreachable;
            }
            out.append(']') catch unreachable;
            return out.toOwnedSlice() catch unreachable;
        }
    },
    else => {},
    }
    return std.fmt.allocPrint(std.heap.page_allocator, "{any}", .{v}) catch unreachable;
}

fn _mem() i64 {
    const path = "/proc/self/statm";
    var file = std.fs.openFileAbsolute(path, .{}) catch return 0;
    defer file.close();
    var buf: [64]u8 = undefined;
    const n = file.readAll(&buf) catch return 0;
    var it = std.mem.tokenizeScalar(u8, buf[0..n], ' ');
    _ = it.next(); // total program size
    if (it.next()) |tok| {
        const pages = std.fmt.parseInt(i64, tok, 10) catch return 0;
        return pages * @as(i64, @intCast(std.mem.page_size));
    }
    return 0;
}

fn _print(v: []const u8) void {
    std.debug.print("{s}\n", .{v});
}
